made changes based on  marketing

--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
                         <div class="row">
                           <div class="dropdown__content col-md-2">
                             <ul class="menu-vertical">
+                              <li> <a href="solutions-home.html#section5">Rhonda</a> </li>
+
                               <li> <a href="solutions-home.html#section2">Automation</a> </li>
                               <li> <a href="solutions-home.html#section3">Material Handling</a> </li>
                               <li> <a href="solutions-home.html#section4">Executive Search</a> </li>
-                              <li> <a href="solutions-home.html#section5">Rhonda</a> </li>
                             </ul>
                           </div>
                         </div>
@@ -142,8 +143,8 @@
         <div class="row">
           <div class="col-sm-6 col-xs-12">
             <div class="video-cover border--round box-shadow-wide">
-              <div class="background-image-holder"> <img alt="image" src="img/about-video-preview2.jpg"> </div>
-              <div class="video-play-icon"></div> <iframe data-src="https://www.youtube.com/embed/e9g0eZ2M0tk" allowfullscreen="allowfullscreen"></iframe> </div>
+              <div class="background-image-holder"> <img alt="image" src="img/about-video-preview5.jpg"> </div>
+              <div class="video-play-icon"></div> <iframe data-src="https://www.youtube.com/embed/4f49y5cY8QI" allowfullscreen="allowfullscreen"></iframe> </div>
           </div>
           <div class="col-sm-6 col-md-5">
             <div class="switchable__text">
@@ -207,14 +208,28 @@
             <div class="switchable__text formSameAsCareerPage">
               <h2>Never miss a job opportunity in your area.</h2>
               <p class="lead"> Sign up to receive up-to-date job openings from Rhonda.</p>
-              <script charset="utf-8" type="text/javascript" src="http://js.hsforms.net/forms/v2.js"></script>
+              <!-- <script charset="utf-8" type="text/javascript" src="http://js.hsforms.net/forms/v2.js"></script>
               <script>
                 hbspt.forms.create({
                   portalId: "3221062",
                   formId: "4b5baabf-8510-49ff-ace0-c9e6bef12ae4",
                   css: ""
                 });
+              </script> -->
+
+              <!--[if lte IE 8]>
+              <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
+              <![endif]-->
+              <script charset="utf-8" type="text/javascript" src="http://js.hsforms.net/forms/v2.js"></script>
+              <script>
+                hbspt.forms.create({
+              	portalId: "3221062",
+              	formId: "15c57cdd-6765-4fae-9a9f-13d2a286f266",
+              	css: ""
+              });
               </script>
+
+
               <!-- <form action="//mrare.us8.list-manage.com/subscribe/post?u=77142ece814d3cff52058a51f&amp;id=f300c9cce8" data-success="Thanks for signing up.  Please check your inbox for a confirmation email." data-error="Please provide your name and email address and agree to the terms."> <input class="validate-required" type="text" name="NAME" placeholder="Your Name"> <input class="validate-required validate-email" type="email" name="EMAIL" placeholder="Email Address"> <input class="validate-required" type="checkbox" name="group[13737][1]"> <button type="submit" class="btn btn--primary type--uppercase">Subscribe</button>
                                     <div aria-hidden="true"> <input type="text" name="b_77142ece814d3cff52058a51f_f300c9cce8" tabindex="-1" value=""> </div>
                                 </form> -->
