--- a/rhonda.html
+++ b/rhonda.html
@@ -69,10 +69,11 @@
                         <div class="row">
                           <div class="dropdown__content col-md-2">
                             <ul class="menu-vertical">
+                              <li> <a href="solutions-home.html#section5">Rhonda</a> </li>
+                              
                               <li> <a href="solutions-home.html#section2">Automation</a> </li>
                               <li> <a href="solutions-home.html#section3">Material Handling</a> </li>
                               <li> <a href="solutions-home.html#section4">Executive Search</a> </li>
-                              <li> <a href="solutions-home.html#section5">Rhonda</a> </li>
                             </ul>
                           </div>
                         </div>
@@ -150,8 +151,9 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-10 col-md-8">
-            <h2> How Does Rhonda Operate? </h2>
-            <p class="lead"> Build your own <i>recipe</i>&nbsp;using a variety of conversation formats, assign values In<br>three easy steps, Rhonda uses your <i>recipes</i>&nbsp;to communicate to and manage<br>the audience of your choice. </p>
+            <h2>How Does Rhonda Work?</h2>
+            <p class="lead">Keep your finger on the pulse of your workforce. Broadcast your message using a variety of conversation formats; assign values to audience responses and begin collecting real-time data.</p>
+            <!-- <p class="lead"> Build your own <i>recipe</i>&nbsp;using a variety of conversation formats, assign values In<br>three easy steps, Rhonda uses your <i>recipes</i>&nbsp;to communicate to and manage<br>the audience of your choice. </p> -->
           </div>
         </div>
       </div>
@@ -252,7 +254,7 @@
                 </div>
                 <div class="rhondaPage hover-element__reveal myhover" data-overlay="4">
                   <div class="project-thumb__title">
-                    <h5><b>Intelligent Feedback</b></h5> <span>Receive real-time data for every message you send out to optimize your level of service.<br></span> </div>
+                    <h5><b>Insightful Feedback</b></h5> <span>Receive real-time data for every message you send out to optimize your level of service.<br></span> </div>
                 </div>
               </a>
             </div>
@@ -312,7 +314,7 @@
         <div class="row">
           <div class="col-sm-10 col-md-8">
             <h2>Who’s Rhonda Working With?</h2>
-            <p class="lead"> She's operational in some of the largest supply chain operations in North America. From beginning to end, she's automating everything.</p>
+            <p class="lead">She is integrated in some of the largest supply chain operations in North America. She’s automating everything from the initial hiring process to the perpetual maintenance.</p>
           </div>
         </div>
       </div>
