--- a/solutions-home.html
+++ b/solutions-home.html
@@ -180,10 +180,10 @@
                         <div class="row">
                           <div class="dropdown__content col-md-2">
                             <ul class="menu-vertical">
+                              <li> <a href="solutions-home.html#section5">Rhonda</a> </li>
                               <li> <a href="solutions-home.html#section2">Automation</a> </li>
                               <li> <a href="solutions-home.html#section3">Material Handling</a> </li>
                               <li> <a href="solutions-home.html#section4">Executive Search</a> </li>
-                              <li> <a href="solutions-home.html#section5">Rhonda</a> </li>
                             </ul>
                           </div>
                         </div>
@@ -245,6 +245,9 @@
         <li>
           <a href="#section1" data-title="Solution"> </a>
         </li>
+        <li>
+          <a href="#section5" data-title="Meet Rhonda"> </a>
+        </li>
 
         <li>
           <a href="#section2" data-title="Automation"> </a>
@@ -255,9 +258,7 @@
         <li>
           <a href="#section4" data-title="Executive Search"> </a>
         </li>
-        <li>
-          <a href="#section5" data-title="Meet Rhonda"> </a>
-        </li>
+
       </ul>
     </section>
 
@@ -291,7 +292,7 @@
             </div>
             <div class="col-sm-4">
               <div style="padding-bottom:0" class="feature feature-4 boxed boxed--lg boxed--border"> <i class="icon icon-Business-Mens"></i>
-                <h4>Monitor your Workforce</h4>
+                <h4>Increase Retention</h4>
                 <hr>
                 <p style="margin-bottom:30px"> Rhonda checks in with your employees weekly to monitor job-satisfaction, trends, and productivity. </p>
               </div>
@@ -320,6 +321,21 @@
     </section>
     <!-- <a  class="in-page-link"></a> -->
 
+
+    <!-- <a id="rhonda" class="in-page-link"></a> -->
+    <section id="section5" class="cover imagebg text-center height-100 section--ken-burns" data-overlay="1">
+      <div class="background-image-holder"> <img alt="Rhonda, your AI workforce management solution with the power to automate thousands of tasks." src="img/rhondabg-solutions.jpg"> </div>
+      <div class="container pos-vertical-center">
+        <div class="row">
+          <div class="col-sm-8 col-md-9">
+            <h1>Meet Rhonda</h1>
+            <p class="lead"> A revolution in the world of workforce management, Rhonda provides companies with a complete picture of their people. With Rhonda at the helm, your workforce will never miss a beat allowing your overall productivity to soar. Gain unparalleled insight into your organization to maintain the highest level of sustainable performance.<br> </p>
+            <a class="btn type--uppercase" href="rhonda.html"> <span class="btn__text">
+						Learn More</span> </a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <section id="section2" style="margin-top:0; padding-top:0" class="cover imagebg text-center height-100 section--ken-burns" data-overlay="1">
       <div class="background-image-holder"> <img alt="Save millions in lost revenue with Rhonda's Artificial Intelligence automation" src="img/imi-Automation Artificial Intelligence-Header.jpg"> </div>
@@ -370,20 +386,8 @@
         </div>
       </div>
     </section>
-    <!-- <a id="rhonda" class="in-page-link"></a> -->
-    <section id="section5" class="cover imagebg text-center height-100 section--ken-burns" data-overlay="1">
-      <div class="background-image-holder"> <img alt="Rhonda, your AI workforce management solution with the power to automate thousands of tasks." src="img/rhondabg-solutions.jpg"> </div>
-      <div class="container pos-vertical-center">
-        <div class="row">
-          <div class="col-sm-8 col-md-9">
-            <h1>Meet Rhonda</h1>
-            <p class="lead"> A revolution in the world of workforce management, Rhonda provides companies with a complete picture of their people. With Rhonda at the helm, your workforce will never miss a beat allowing your overall productivity to soar. Gain unparalleled insight into your organization to maintain the highest level of sustainable performance.<br> </p>
-            <a class="btn type--uppercase" href="rhonda.html"> <span class="btn__text">
-						Learn More</span> </a>
-          </div>
-        </div>
-      </div>
-    </section>
+
+
     <footer class="text-center-xs space--xs">
         <div class="container">
           <div class="row">
